// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Physical Sequential Data Set Success scenarios should create a physical sequential data set 1`] = `
"================Z/OS FILES CREATE DATA-SET-SEQUENTIAL===============
Data set created successfully.
"
`;

exports[`Create Physical Sequential Data Set Success scenarios should create a physical sequential data set and print attributes 1`] = `
"================Z/OS FILES CREATE DATA-SET-SEQUENTIAL ===============
{
  \\"success\\": true,
  \\"exitCode\\": 0,
  \\"message\\": \\"\\",
  \\"stdout\\": \\"Data set created successfully.\\\\n\\",
  \\"stderr\\": \\"\\",
  \\"data\\": {
    \\"success\\": true,
    \\"commandResponse\\": \\"Data set created successfully.\\"
  }
}"
`;

exports[`Create Physical Sequential Data Set Success scenarios should create a physical sequential data set with specified primary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-SEQUENTIAL===============
alcunit:   CYL
dsorg:     PS
primary:   20
recfm:     FB
blksize:   6160
lrecl:     80
secondary: 1

Data set created successfully.
"
`;

exports[`Create Physical Sequential Data Set Success scenarios should create a physical sequential data set with specified primary and secondary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-SEQUENTIAL===============
alcunit:   CYL
dsorg:     PS
primary:   20
recfm:     FB
blksize:   6160
lrecl:     80
secondary: 5

Data set created successfully.
"
`;

exports[`Create Physical Sequential Data Set Success scenarios should create a physical sequential data set with specified size 1`] = `
"================Z/OS FILES CREATE DATA-SET-SEQUENTIAL===============
alcunit:   CYL
dsorg:     PS
primary:   2
recfm:     FB
blksize:   6160
lrecl:     80
secondary: 0

Data set created successfully.
"
`;

exports[`Create Physical Sequential Data Set without profiles should create a physical sequential data set 1`] = `
"Data set created successfully.
"
`;
